--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
- <div id="salida"></div>
- <script src="principal.js" type="module"></script>
-</body>
+ <section id="personaForm">
+    <h3>Datos de la persona</h3>
+    <input type="text" id="personaForm_inNombre" placeholder="Nombre"></input>
+    <input type="text" id="personaForm_inSexo" placeholder="Sexo"></input>
+    <button id="personaForm_btProcesar">Procesar</button>
+ </section>
+ <section id="mainForm">
+    <h3>Contador de personas</h3>
+    <div id="mainForm_salida"></div>
+ </section>
+ </body>
+<script type="module">
+    import cl_principal from "./js/principal.js";
+    new cl_principal();
+ </script>
 </html>
